--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@ Building off the findings of the survey, <b>key points for policy action are:</b
        <!-- <p><b>The Network</b> is a coalition founded in 1994 and administered by The Center, consisting of 62 LGBT-specific and LGBT-supportive nonprofit organizations that provide care to LGBT New Yorkers. Members of The New York State LGBT Health & Human Services Network serve all of New York State’s 62 counties—including upstate, downstate, rural, and urban populations.
 <br><br>
         Together and United, we increase our shared capacity as LGBTQ+ specific organizations and programs to serve our communities through funding and legislative advocacy, capacity enhancement, and coalition building. As members of the New York State LGBT HHS Network, we aspire to increase the safety, freedom, quality of life, and wellbeing of every LGBTQ+ person in New York State. -->
-<br><b>The map to the right</b> shows where each Network member is located throughout the state.
+<br><b>The map to the right</b> shows where each Network member is located throughout the state, as of 2022.
 <br><br>&nbsp; <i style="font-size:1em; color: #F2695F" class="fa">&#xf245;</i> Hover over each point learn more about a particular service.
 <br><br><input type="checkbox" id="myCheckbox" name="myCheckbox" value="value"> Toggle different layers to see how barriers to seeking care and services interact with Network member locations.
 
