--- a/chordDiagram.html
+++ b/chordDiagram.html
@@ -42,8 +42,8 @@
         }
 
         .legend-square {
-    width: 2vw;  /* Adjust these values to suit your design */
-    height: 2vw;  /* Adjust these values to suit your design */
+    width: 2vw;  
+    height: 2vw; 
     margin-right: 1em;
 }
 
@@ -62,7 +62,7 @@
             height: auto;
             padding: 5px;
             font: 12px sans-serif;
-            background: rgba(0, 0, 0, 0.75); /* Black with 0.75 opacity */
+            background: rgba(0, 0, 0, 0.75); 
             border: 0px;
             border-radius: 8px;
             pointer-events: none;
@@ -115,7 +115,7 @@
             {category: "Mental health services", white: 45, nonWhite: 49, colorWhite: "rgba(238, 130, 238, 0.5)", colorNonWhite: "rgba(238, 130, 238, 1)"}
         ];
 
-        // Sort data by nonWhite percentage
+        // Sort data 
         data.sort((a, b) => b.nonWhite - a.nonWhite);
 
         // Initial setup
