--- a/network_map.html
+++ b/network_map.html
@@ -120,7 +120,6 @@
     }
   }
 
-  /* Custom CSS to place the zoom control at the bottom right corner */
   .leaflet-bottom.leaflet-right {
     right: 10px;
     bottom: 10px;
@@ -153,12 +152,11 @@
 </div>
 <div id='map'></div>
 <script>
-  // Initialize the Leaflet map with zoomControl set to false
+  // Initialize the Leaflet map 
   var map = L.map('map', {
     zoomControl: false
   }).setView([43.022150007429644, -75.65929113474522], 5.5);
 
-  // Add zoom control manually to the bottom right corner
   L.control.zoom({
     position: 'bottomright'
   }).addTo(map);
