--- a/triangleChart.html
+++ b/triangleChart.html
@@ -31,12 +31,12 @@ const triangleChartCtx = document.getElementById('triangleChart').getContext('2d
 const triangleChart = new Chart(triangleChartCtx, {
     type: 'radar',
     data: {
-        labels: ['Ages 13-34', 'Ages 35-49', 'Age 50+'], // Age groups as the axes of the radar
+        labels: ['Ages 13-34', 'Ages 35-49', 'Age 50+'], 
         datasets: [
        
             {
                 label: 'Trans',
-                data: [11, 8, 8], // Hypothetical data for Trans across the 3 age groups
+                data: [11, 8, 8], 
                 backgroundColor: 'rgba(242, 105, 95, 0.2)',
                 borderColor: 'rgba(242, 105, 95, 1)',
                 pointBackgroundColor: 'rgba(242, 105, 95, 1)',
@@ -46,7 +46,7 @@ const triangleChart = new Chart(triangleChartCtx, {
             },
             {
                 label: 'Non-binary, other or multiple',
-                data: [45, 21, 7], // Hypothetical data for Other or multiple gender identities across the 3 age groups
+                data: [45, 21, 7], 
                 backgroundColor: 'rgba(35, 153, 181, 0.2)',
                 borderColor: 'rgba(35, 153, 181, 1)',
                 pointBackgroundColor: 'rgba(35, 153, 181, 1)',
@@ -56,7 +56,7 @@ const triangleChart = new Chart(triangleChartCtx, {
             },
             {
                 label: 'Straight, Gay, or Lesbian',
-                data: [29, 48, 76], // Hypothetical data for Straight, Gay, or Lesbian across the 3 age groups
+                data: [29, 48, 76], 
                 backgroundColor: 'rgba(126, 188, 100, 0.2)',
                 borderColor: 'rgba(126, 188, 100, 1)',
                 pointBackgroundColor: 'rgba(126, 188, 100, 1)',
@@ -66,7 +66,7 @@ const triangleChart = new Chart(triangleChartCtx, {
             },
             {
                 label: 'Bisexual, pansexual, queer, other',
-                data: [71, 52, 24], // Hypothetical data for Bisexual, pansexual, queer, other across the 3 age groups
+                data: [71, 52, 24], 
                 backgroundColor: 'rgba(153, 102, 255, 0.2)',
                 borderColor: 'rgba(153, 102, 255, 1)',
                 pointBackgroundColor: 'rgba(153, 102, 255, 1)',
@@ -76,7 +76,7 @@ const triangleChart = new Chart(triangleChartCtx, {
             },
             {
                 label: 'Cisgender',
-                data: [44, 72, 85], // Hypothetical data for Cisgender across the 3 age groups
+                data: [44, 72, 85], 
                 backgroundColor: 'rgba(258, 206, 67, 0.2)',
                 borderColor: 'rgba(258, 206, 67, 0.5)',
                 pointBackgroundColor: 'rgba(258, 206, 67, 0.2)',
@@ -87,8 +87,8 @@ const triangleChart = new Chart(triangleChartCtx, {
         ]
     },
     options: {
-        responsive: true, // The chart will grow to fill the container
-        maintainAspectRatio: false, // The chart will not maintain the aspect ratio
+        responsive: true, 
+        maintainAspectRatio: false, 
         layout: {
       
             padding: 0,
@@ -96,11 +96,10 @@ const triangleChart = new Chart(triangleChartCtx, {
         scales: {
             r: {
                 ticks: {
-                    // Adjust the font of the radial axis ticks (labels)
                     display: true,
                     font: {
-                        size: 10, // Sets the font size
-                        family: 'Arial', // Sets the font family
+                        size: 10, 
+                        family: 'Arial', 
                     }
                 },
                 angleLines: {
@@ -112,30 +111,29 @@ const triangleChart = new Chart(triangleChartCtx, {
                 suggestedMin: 0,
                 suggestedMax: 100,
                 pointLabels: {
-                    // This is where you adjust the font for the point labels around the radar
                     font: {
-                        size: 14, // Set the font size for the point labels
-                        family: 'Arial' // Set the font family for the point labels
+                        size: 14, 
+                        family: 'Arial' 
                     }, 
                 }
             }
         },
         plugins: {
             legend: {
-        position: 'bottom', // Ensures the legend is at the bottom
+        position: 'bottom', 
         labels: {
-            boxWidth: 2, // Width of the color box accompanying the legend text
+            boxWidth: 2, 
             boxHeight: 2,
-            padding: 5,  // Space between each legend item
+            padding: 5,  
             font: {
-                size: 12,  // Set the font size to 14px
-                family: 'Arial', // Optional: Specify the font family
-                style: 'normal', // Optional: Specify the font style
-                weight: 'normal' // Optional: Specify the font weight
+                size: 12,  
+                family: 'Arial', 
+                style: 'normal', 
+                weight: 'normal' 
             }
         },
-        align: 'center', // Aligns the legend items to the start (left if position is top or bottom)
-        maxHeight: 50, // Adjust based on your specific needs
+        align: 'center', 
+        maxHeight: 50, 
     },
             tooltip: {
                 callbacks: {
@@ -168,13 +166,11 @@ const triangleChart = new Chart(triangleChartCtx, {
 function resizeCanvas() {
     var canvas = document.getElementById('triangleChart');
     if (!canvas) return;
-    // Set the dimensions explicitly, avoiding continuous growth or zero dimensions
     canvas.width = document.getElementById('column2').offsetWidth;
-    canvas.height = Math.min(window.innerHeight * 0.75, 400);  // Limiting height to avoid it becoming too large
-    // Re-instantiate the chart or update its size here if necessary
+    canvas.height = Math.min(window.innerHeight * 0.75, 400);  
+
 }
 
-// Ensure resize logic is called on appropriate events
 window.addEventListener('resize', resizeCanvas);
 window.addEventListener('DOMContentLoaded', resizeCanvas);
 
