--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 
 
 h1 {
-    font-weight: 700; /* Bold */
+    font-weight: 700; 
     font-size: 1.75em;
     color: #f2695f;
     margin-bottom: 0;
@@ -34,7 +34,7 @@ h1 {
 }
 
 h2 {
-    font-weight: 500; /* Bold */
+    font-weight: 500; 
     font-size: 1.3em;
     font-weight: bold; 
     color: #0C4B7F;
@@ -49,8 +49,8 @@ h2 {
 
 .container {
     
-    display: flex;      /* Enables flexbox layout mode */
-    flex-wrap: wrap;    /* Allows items to wrap onto the next line as needed */
+    display: flex;     
+    flex-wrap: wrap;   
     width: 100%;
     /* height: 100vh; */
     margin-left: 3%;
@@ -61,10 +61,10 @@ h2 {
 
 
 .column {
-    flex: 1 1 50%;       /* Flex-grow, Flex-shrink, Flex-basis */
+    flex: 1 1 50%;      
     padding: 0 1%;
     box-sizing: border-box;
-    min-width: 0;        /* Fixes issues with flexbox stretching */
+    min-width: 0;    
     margin-bottom: 5%;
 }
 
@@ -120,17 +120,17 @@ canvas {
 
 
     h1 {
-        font-size: 1.5rem; /* Larger headers for mobile */
+        font-size: 1.5rem;
     }
 
 
     .column, #column1, #column2, #columnMap1, #columnMap2 {
-        flex: 1 0 100%; /* Flex-grow, Flex-shrink, Flex-basis */
-        width: 100%; /* Ensures each column takes full width */
-        padding-right: 0; /* Adjust padding as needed */
-        padding-left: 0; /* Adjust padding for consistency */
+        flex: 1 0 100%; 
+        width: 100%; 
+        padding-right: 0; 
+        padding-left: 0; 
         padding-top: 0; 
-        margin-bottom: 5%; /* Maintain bottom margin for spacing */
+        margin-bottom: 5%; 
     }
 
 
@@ -139,7 +139,7 @@ canvas {
     }
 
     :root {
-        --text-font-size: 14px; /* Smaller font size for mobile */
+        --text-font-size: 14px; 
     }
 
     #igraph {
@@ -154,10 +154,10 @@ canvas {
     }
 
     .circle {
-        margin-right: 0.5em;  /* Reduced margin for smaller screens */
+        margin-right: 0.5em;  
     }
     .text {
-        font-size: 14px;  /* Smaller font size for mobile devices */
+        font-size: 14px;  
         margin-left: 1em;
         margin-right: 1em; 
         margin-top: 1em;
@@ -172,22 +172,19 @@ canvas {
 
 
 a {
-    font-size: 1em;                   /* Sets the font size */
-    font-weight: bold;                 /* Makes the font bold */
-    color: #f2695f;                       /* Sets the font color */
-    text-decoration: none;             /* No underline */
+    font-size: 1em;                  
+    font-weight: bold;                 
+    color: #f2695f;                     
+    text-decoration: none;           
 }
 
 a:hover {
-    color: #2399b5;                   /* Changes color on hover */
+    color: #2399b5;            
 }
 
 
 #covidInfection
 {
-    /* max-height: 500px;
-    display: block;
-    margin-top: 6%; */
     max-width: 70%;
     margin-left: 15%;
     max-height: 70%;
@@ -260,42 +257,41 @@ a:hover {
     display: flex;
     height: 40vh;
     width: 100vw;
-    text-align: center; /* Center the legend container inside this div */
+    text-align: center; 
   }
   
   .chart-legend {
-    display: block; /* Align the legend block in the center of its container */
-    text-align: center; /* Center the legend text */
-    list-style-type: none; /* Remove default list styling */
+    display: block; 
+    text-align: center; 
+    list-style-type: none; 
     padding: 0;
 }
 
 .chart-legend ul {
     padding: 0;
-    margin: 0 auto; /* Centering the UL inside .chart-legend */
-    display: flex; /* Display legend items in a row */
-    justify-content: center; /* Center legend items horizontally */
-    gap: 10px; /* Adjust gap between items */
+    margin: 0 auto; 
+    display: flex;
+    justify-content: center; 
+    gap: 10px; 
     list-style: none;
 }
 
 .chart-legend li {
-    font-size: .5em; /* Adjust based on your design */
-    display: flex; /* Align color box and text horizontally */
-    align-items: center; /* Center items vertically */
-    white-space: nowrap; /* Keep text in a single line */
+    font-size: .5em; 
+    display: flex; 
+    align-items: center; 
+    white-space: nowrap;
 }
 
 .legend-color {
-    width: 20px; /* Adjust size of color box */
-    height: 20px; /* Adjust size of color box */
-    display: inline-block; /* Allow it to sit next to text */
-    margin-right: 5px; /* Space between color box and text */
+    width: 20px; 
+    height: 20px; 
+    display: inline-block; 
+    margin-right: 5px; 
 }
 
 
 
-      /* Remove default bullet points */
       ul {
         list-style-type: none;
         padding: 0;
@@ -312,7 +308,7 @@ section {
 
 
 :root {
-    --text-font-size: 16px; /* Adjust base text size */
+    --text-font-size: 16px; 
 }
 
 
@@ -334,7 +330,7 @@ section {
   }
   
   #navbar a.active {
-  background-color: #F2695F; /* Highlight color */
+  background-color: #F2695F; 
   color: #F2695F;
   }
   
