--- a/network_map.html
+++ b/network_map.html
@@ -33,7 +33,7 @@
     font-size: 0.75em;
     top: 0px;
     left: 0px;
-    z-index: 1000; /* Ensure legend is on top */
+    z-index: 1000; 
     border: 1px solid grey;
     overflow-y: auto;
     max-height: 100vh;
